expect from Python. :-/

Thankfully, storing the regular expressions in variables works just
fine, so we'll do that.
----------------------------------------------------------------------
Tue Jan 22 16:56:03 2013                        Michael Jennings (mej)

1.2.2 has been released.
----------------------------------------------------------------------
Tue Jan 22 16:58:44 2013                        Michael Jennings (mej)

Setting up the tree for 1.2.3 development.
----------------------------------------------------------------------
Mon Feb  4 11:20:34 2013                        Michael Jennings (mej)

Fix from Ole Holm Nielsen <Ole.H.Nielsen@fysik.dtu.dk> for his
nhc.cron script to place transient files in /var/lib/nhc rather than
/tmp to avoid potential symlink issues.  Based on suggestions on the
hpc-monitoring Google Group from Stuart Barkley <google@4gh.net> and
Jesse Becker <hawson@gmail.com>.
----------------------------------------------------------------------
Mon Feb 11 14:22:29 2013                        Michael Jennings (mej)

Added variable $DETACHED_MODE_FAIL_NODATA which can be set to 1 to
cause detached mode to return failure by default, instead of success,
when no results file is present from a previous run.

Also made sure that results files which are older than /proc,
indicating a reboot since the last run, are considered stale and
removed.
----------------------------------------------------------------------
Mon Mar 11 14:47:19 2013                        Michael Jennings (mej)

Add DMI data gatherer and corresponding checks.  Definitely not
speedy, but there's an awful lot of very valuable information that can
be gleaned from it.  And, as always, once you take the initial hit,
you can write as many DMI checks as you like with minimal added
overhead.

Still need to write the unit tests for the new checks.
----------------------------------------------------------------------