@@ -11,9 +11,10 @@ dist_sbin_SCRIPTS = nhc
 dist_conf_DATA = nhc.conf
 dist_helper_SCRIPTS = helpers/node-mark-online helpers/node-mark-offline
 
-nobase_dist_conf_DATA = scripts/common.nhc scripts/ww_fs.nhc	\
-                        scripts/ww_hw.nhc scripts/ww_job.nhc	\
-                        scripts/ww_nv.nhc scripts/ww_ps.nhc
+nobase_dist_conf_DATA = scripts/common.nhc scripts/ww_dmi.nhc	\
+                        scripts/ww_fs.nhc scripts/ww_hw.nhc	\
+                        scripts/ww_job.nhc scripts/ww_nv.nhc	\
+                        scripts/ww_ps.nhc
 
 MAINTAINERCLEANFILES = Makefile.in aclocal.m4 configure install-sh missing
 DISTCLEANFILES = 
